update to try some openstack lab deployment

--- a/tasks/198-perms-usergroup.yml
+++ b/tasks/198-perms-usergroup.yml
@@ -23,16 +23,16 @@
       - Ansible admins
     state: present
 
-- name: Create an external user group - tfm-admins
-  theforeman.foreman.external_usergroup:
-    server_url: "{{ foreman_url_app }}"
-    username: "{{ foreman_admin_username }}"
-    password: "{{ foreman_admin_password }}"
-    validate_certs: false
-    name: tfm-admins
-    auth_source: lab-ldap
-    usergroup: admins
-    state: present
+# - name: Create an external user group - tfm-admins
+#   theforeman.foreman.external_usergroup:
+#     server_url: "{{ foreman_url_app }}"
+#     username: "{{ foreman_admin_username }}"
+#     password: "{{ foreman_admin_password }}"
+#     validate_certs: false
+#     name: tfm-admins
+#     auth_source: lab-ldap
+#     usergroup: admins
+#     state: present
 
 ### sysadm
 
@@ -57,13 +57,13 @@
       - Ansible admins
     state: present
 
-- name: Create an external user group - tfm-sysadm
-  theforeman.foreman.external_usergroup:
-    server_url: "{{ foreman_url_app }}"
-    username: "{{ foreman_admin_username }}"
-    password: "{{ foreman_admin_password }}"
-    validate_certs: false
-    name: tfm-sysadm
-    auth_source: lab-ldap
-    usergroup: sysadm
-    state: present
+# - name: Create an external user group - tfm-sysadm
+#   theforeman.foreman.external_usergroup:
+#     server_url: "{{ foreman_url_app }}"
+#     username: "{{ foreman_admin_username }}"
+#     password: "{{ foreman_admin_password }}"
+#     validate_certs: false
+#     name: tfm-sysadm
+#     auth_source: lab-ldap
+#     usergroup: sysadm
+#     state: present
