--- a/tasks/134-os_provisioning_templates.yml
+++ b/tasks/134-os_provisioning_templates.yml
@@ -7,7 +7,7 @@
 - include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_Debian.yml
 
 # ESXi templates
-- include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_ESXi.yml
+# - include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_ESXi.yml
 
 # Windows templates
-- include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_Windows.yml
+# - include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_Windows.yml
