--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,26 +29,26 @@
 # - include_tasks: "100-auth-source.yml"
 
 # Common stuff
-- include_tasks: "101-organization.yml"
-- include_tasks: "102-location.yml"
-- include_tasks: "103-domain.yml"
-- include_tasks: "104-subnet.yml"
+# - include_tasks: "101-organization.yml"
+# - include_tasks: "102-location.yml"
+# - include_tasks: "103-domain.yml"
+# - include_tasks: "104-subnet.yml"
 
 # Smart proxy org+location
-- include_tasks: "109-smart_proxy.yml"
+# - include_tasks: "109-smart_proxy.yml"
 
 # Compute tasks + handlers
-- include_tasks: "120-compute-resource.yml"
+# - include_tasks: "120-compute-resource.yml"
 # - include_tasks: "121-compute-profil.yml"
 
 # OS tasks + handlers
-- include_tasks: "131-os_operatingsystems.yml"
-- include_tasks: "132-os_installation_medium.yml"
-- include_tasks: "133-os_partition_table.yml"
+# - include_tasks: "131-os_operatingsystems.yml"
+# - include_tasks: "132-os_installation_medium.yml"
+# - include_tasks: "133-os_partition_table.yml"
 - include_tasks: "134-os_provisioning_templates.yml"
 
 # Hostgroup
-- include_tasks: "140-hostgroup.yml"
+# - include_tasks: "140-hostgroup.yml"
 
 # TASK TO SETUP R10K PULL GIT ON TFM-PUPPET
 # Puppet classes import must also be run after each 'r10k pull' on tfm-puppet, 
@@ -58,6 +58,6 @@
 # - include_tasks: "160-smart_class_parameter.yml"
 
 # Roles, permissions
-- include_tasks: "197-perms-roles.yml"
-- include_tasks: "198-perms-usergroup.yml"
+# - include_tasks: "197-perms-roles.yml"
+# - include_tasks: "198-perms-usergroup.yml"
 # - include_tasks: "198-perms-user.yml"
