--- a/tasks/os_provisioning_templates_Debian.yml
+++ b/tasks/os_provisioning_templates_Debian.yml
@@ -66,8 +66,8 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "UserData default"
-    operatingsystems: 
-      - "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystems:
+      - "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
   when: "'Debian' in item.name"
@@ -80,8 +80,8 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "Preseed default"
-    operatingsystems: 
-      - "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystems:
+      - "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
   when: "'Debian' in item.name"
@@ -94,8 +94,8 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "Preseed default finish"
-    operatingsystems: 
-      - "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystems:
+      - "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
   when: "'Debian' in item.name"
@@ -108,22 +108,21 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "Preseed default PXELinux"
-    operatingsystems: 
-      - "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystems:
+      - "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
   when: "'Debian' in item.name"
   delegate_to: localhost
 
 # Trigger handlers to assign OS default templates
-
-- name: "trigger OS Assign Provisioning templates"
-  ansible.builtin.command: echo "this task will trigger an handler"
+- name: "Trigger OS Assign Provisioning templates"
+  ansible.builtin.command: /bin/true
+  changed_when: true
   notify:
-    - "Assign Provisioning templates to OS Debian"
-    - "Set Debian default Provisioning templates to OS user_data"
-    - "Set Debian default Provisioning templates to OS provision"
-    - "Set Debian default Provisioning templates to OS finish"
-    - "Set Debian default Provisioning templates to OS PXELinux"
+    - Assign Provisioning templates to OS Debian
+    - Set Debian default Provisioning templates to OS user_data
+    - Set Debian default Provisioning templates to OS provision
+    - Set Debian default Provisioning templates to OS finish
+    - Set Debian default Provisioning templates to OS PXELinux
   delegate_to: localhost
-
