--- a/files/handler_os_operatingsystems_Debian.yml
+++ b/files/handler_os_operatingsystems_Debian.yml
@@ -8,10 +8,10 @@
     password: "{{ foreman_admin_password }}"
     server_url: "{{ foreman_url_app }}"
     validate_certs: false
-    name: "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
-#    major: "{{ item.major }}"
-#    minor: "{{ item.minor | default(omit) }}"
-#    family: "{{ item.family }}"
+    name: "{{ item.name }}"
+    major: "{{ item.major }}"
+    minor: "{{ item.minor | default(omit) }}"
+    family: "{{ item.family }}"
     provisioning_templates:
       - "UserData default"
       - "Preseed default"
@@ -31,7 +31,7 @@
     password: "{{ foreman_admin_password }}"
     server_url: "{{ foreman_url_app }}"
     validate_certs: false
-    operatingsystem: "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystem: "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     template_kind: "user_data"
     provisioning_template: "UserData default"
     state: present
@@ -46,7 +46,7 @@
     password: "{{ foreman_admin_password }}"
     server_url: "{{ foreman_url_app }}"
     validate_certs: false
-    operatingsystem: "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystem: "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     template_kind: "finish"
     provisioning_template: "Preseed default finish"
     state: present
@@ -61,7 +61,7 @@
     password: "{{ foreman_admin_password }}"
     server_url: "{{ foreman_url_app }}"
     validate_certs: false
-    operatingsystem: "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystem: "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     template_kind: "provision"
     provisioning_template: "Preseed default"
     state: present
@@ -76,7 +76,7 @@
     password: "{{ foreman_admin_password }}"
     server_url: "{{ foreman_url_app }}"
     validate_certs: false
-    operatingsystem: "{{ item.name + ' ' + item.major|string if not item.minor else item.name + ' ' + item.major|string + '.' + item.minor|string }}"
+    operatingsystem: "{{ item.name + ' ' + item.major | string if not item.minor else item.name + ' ' + item.major | string + '.' + item.minor | string }}"
     template_kind: "PXELinux"
     provisioning_template: "Preseed default PXELinux"
     state: present
