--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,16 +4,5 @@ galaxy_info:
   company: stuff (wtf)
   issue_tracker_url: https://gitea.lab.loxda.net/LAB/tfmforeman/issues
   license: license (CC-BY-4.0)
-  min_ansible_version: 2.9
-  platforms:
-  - name: Debian
-    versions:
-    - 8
-    - 9
-    - 10
-    - 12
-
+  min_ansible_version: "2.9"
   galaxy_tags: []
-
-dependencies: []
-  
