--- a/tasks/134-os_provisioning_templates.yml
+++ b/tasks/134-os_provisioning_templates.yml
@@ -3,8 +3,8 @@
 # CentOS templates
 # - include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_CentOS.yml
 
-# Debian templates
-- include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_Debian.yml
+- name: Debian templates
+  ansible.builtin.include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_Debian.yml
 
 # ESXi templates
 # - include_tasks: ../roles/foreman-custom/tasks/os_provisioning_templates_ESXi.yml
