--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,9 @@
 ---
-
 # - name: Display Target Variables
 #   ansible.builtin.debug:
 #     msg: |
 #       ====================== Display Variables For Provisioning =======================================
-
-#                                            Target: {{ inventory_hostname }}
+#
 #                                  Ansible Playbook: {{ ansible_play_name }}
 #                                  Target.PuppetURl: {{ foreman_host_puppet }}
 #                                    Target.Foreman: {{ foreman_host_app }}
@@ -14,9 +12,9 @@
 #                                   Target.ProxyUrl: {{ foreman_url_proxy }}
 #                                       Target.User: {{ foreman_admin_username }}
 #                                   Target.Password: {{ foreman_admin_password }}
-
+#
 #       =================================================================================================
-
+#
 # - name: Foremann APP webapp check status
 #   theforeman.foreman.status_info:
 #     server_url: "{{ foreman_url_app }}"
@@ -26,38 +24,56 @@
 #   delegate_to: localhost
 
 # Auth sources
-# - include_tasks: "100-auth-source.yml"
+# - ansible.builtin.include_tasks: "100-auth-source.yml"
 
 # Common stuff
-# - include_tasks: "101-organization.yml"
-# - include_tasks: "102-location.yml"
-# - include_tasks: "103-domain.yml"
-# - include_tasks: "104-subnet.yml"
+- name: Set Organization
+  ansible.builtin.include_tasks: "101-organization.yml"
+- name: Set Location
+  ansible.builtin.include_tasks: "102-location.yml"
+- name: Set Domain
+  ansible.builtin.include_tasks: "103-domain.yml"
+- name: Set Subnet
+  ansible.builtin.include_tasks: "104-subnet.yml"
 
 # Smart proxy org+location
-# - include_tasks: "109-smart_proxy.yml"
+- name: Set Smart-Proxy
+  ansible.builtin.include_tasks: "109-smart_proxy.yml"
 
 # Compute tasks + handlers
-# - include_tasks: "120-compute-resource.yml"
-# - include_tasks: "121-compute-profil.yml"
+- name: Set Compute Resource
+  ansible.builtin.include_tasks: "120-compute-resource.yml"
+- name: Set Compute Resource Image
+  ansible.builtin.include_tasks: "121-compute-image.yml"
+- name: Set Compute Profil
+  ansible.builtin.include_tasks: "122-compute-profil.yml"
 
 # OS tasks + handlers
-# - include_tasks: "131-os_operatingsystems.yml"
-# - include_tasks: "132-os_installation_medium.yml"
-# - include_tasks: "133-os_partition_table.yml"
-- include_tasks: "134-os_provisioning_templates.yml"
+- name: Set provisioning Operating System
+  ansible.builtin.include_tasks: "131-os_operatingsystems.yml"
+- name: Set provisioning Installation Medium
+  ansible.builtin.include_tasks: "132-os_installation_medium.yml"
+- name: Set provisioning Partition Table
+  ansible.builtin.include_tasks: "133-os_partition_table.yml"
+- name: Set provisioning Template
+  ansible.builtin.include_tasks: "134-os_provisioning_templates.yml"
 
 # Hostgroup
-# - include_tasks: "140-hostgroup.yml"
+- name: Set provisioning Hostgroup
+  ansible.builtin.include_tasks: "140-hostgroup.yml"
 
 # TASK TO SETUP R10K PULL GIT ON TFM-PUPPET
-# Puppet classes import must also be run after each 'r10k pull' on tfm-puppet, 
+# Puppet classes import must also be run after each 'r10k pull' on tfm-puppet,
 # maybe an handler 'puppet classes import' notified by handler 'r10k pull' after task 'r10k setup' ran on tfm-puppet
-# - include_tasks: "150-puppetclasses_import.yml"
+# - name: Import Puppet Classes
+#   ansible.builtin.include_tasks: "150-puppetclasses_import.yml"
 # TASK TO SET SMART_CLASS_PARAMS AFTER HOSTGROUPS PARAMS
-# - include_tasks: "160-smart_class_parameter.yml"
+# - name: Set Smart Classes parameters
+#   ansible.builtin.include_tasks: "160-smart_class_parameter.yml"
 
 # Roles, permissions
-# - include_tasks: "197-perms-roles.yml"
-# - include_tasks: "198-perms-usergroup.yml"
-# - include_tasks: "198-perms-user.yml"
+- name: Set permissions Roles
+  ansible.builtin.include_tasks: "197-perms-roles.yml"
+- name: Set users and groups
+  ansible.builtin.include_tasks: "198-perms-usergroup.yml"
+# - name: Set permissions Usersansible.builtin.include_tasks: "198-perms-user.yml"
