--- a/tasks/os_provisioning_templates_CentOS.yml
+++ b/tasks/os_provisioning_templates_CentOS.yml
@@ -27,7 +27,7 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: Kickstart default
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.name }} Linux {{ item.major }}.{{ item.minor }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
@@ -41,7 +41,7 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: Kickstart default finish
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.name }} Linux {{ item.major }}.{{ item.minor }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
@@ -55,35 +55,35 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: Kickstart default PXELinux
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.name }} Linux {{ item.major }}.{{ item.minor }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
   when: "'CentOS' in item.name"
   delegate_to: localhost
 
-#- name: "Assign OS: CentOS all versions -> Global Registration"
+# - name: "Assign OS: CentOS all versions -> Global Registration"
 #  theforeman.foreman.provisioning_template:
 #    username: "{{ foreman_admin_username }}"
 #    password: "{{ foreman_admin_password }}"
 #    server_url: "{{ foreman_url_app }}"
 #    validate_certs: false
 #    name: Global Registration
-#    operatingsystems: 
+#    operatingsystems:
 #      - "{{ item.name }} Linux {{ item.major }}.{{ item.minor }}"
 #    state: present
 #  loop: "{{ foreman_operatingsystems }}"
 #  when: "'CentOS' in item.name"
 #  delegate_to: localhost
 
-#- name: "Assign OS: CentOS all versions -> Linux registration default"
+# - name: "Assign OS: CentOS all versions -> Linux registration default"
 #  theforeman.foreman.provisioning_template:
 #    username: "{{ foreman_admin_username }}"
 #    password: "{{ foreman_admin_password }}"
 #    server_url: "{{ foreman_url_app }}"
 #    validate_certs: false
 #    name: Linux registration default
-#    operatingsystems: 
+#    operatingsystems:
 #      - "{{ item.name }} Linux {{ item.major }}.{{ item.minor }}"
 #    state: present
 #  loop: "{{ foreman_operatingsystems }}"
@@ -92,10 +92,11 @@
 
 # Trigger handlers to assign OS default templates
 
-- name: "trigger OS Assign Provisioning templates"
-  ansible.builtin.command: echo "this task will trigger an handler"
-  notify: 
-    - "Assign Provisioning templates to OS CentOS" 
+- name: "Trigger OS Assign Provisioning templates"
+  ansible.builtin.command: /bin/true
+  changed_when: true
+  notify:
+    - "Assign Provisioning templates to OS CentOS"
     - "Set CentOS default Provisioning templates to OS provision"
     - "Set CentOS default Provisioning templates to OS finish"
     - "Set CentOS default Provisioning templates to OS PXELinux"
