--- a/tasks/os_provisioning_templates_Windows.yml
+++ b/tasks/os_provisioning_templates_Windows.yml
@@ -27,7 +27,7 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "PXELinux chain iPXE"
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.description }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
@@ -41,7 +41,7 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "Windows default iPXE httpboot imgfree"
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.description }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
@@ -55,7 +55,7 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "Windows default provision"
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.description }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
@@ -69,7 +69,7 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "Windows peSetup.cmd noproxy"
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.description }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
@@ -83,7 +83,7 @@
     password: "{{ foreman_admin_password }}"
     validate_certs: false
     name: "Windows default finish FR"
-    operatingsystems: 
+    operatingsystems:
       - "{{ item.description }}"
     state: present
   loop: "{{ foreman_operatingsystems }}"
@@ -92,9 +92,10 @@
 
 # Trigger handlers to assign OS default templates
 
-- name: "trigger OS Assign Provisioning templates"
-  ansible.builtin.command: echo "this task will trigger an handler"
-  notify: 
+- name: "Trigger OS Assign Provisioning templates"
+  ansible.builtin.command: /bin/true
+  changed_when: true
+  notify:
     - "Assign Provisioning templates to OS Windows"
     - "Set Windows default Provisioning templates to OS finish"
     - "Set Windows default Provisioning templates to OS provision"
