--- a/tasks/100-auth-source.yml
+++ b/tasks/100-auth-source.yml
@@ -1,27 +1,29 @@
 ---
 
-- name: LDAP Auth with automatic registration
+- name: "Create Auth Sources"
   theforeman.foreman.auth_source_ldap:
     server_url: "{{ foreman_url_app }}"
     username: "{{ foreman_admin_username }}"
     password: "{{ foreman_admin_password }}"
     validate_certs: false
-    name: lab-ldap
-    host: 172.16.203.20
-    port: 389
-    tls: false
-    onthefly_register: true
-    usergroup_sync: true
-    account: ""
-    account_password: ""
-    base_dn: ou=Users,dc=lab,dc=loxda,dc=net
-    groups_base: ou=ForemanGroups,dc=lab,dc=loxda,dc=net
-    server_type: posix
-    attr_login: uid
-    attr_firstname: givenName
-    attr_lastname: sn
-    attr_mail: mail
-    ldap_filter: "" # (&(objectclass=posixaccount)(uid=%s))
-    locations: LAB
-    organizations: LAB
+    name: "{{ item.name }}"
+    host: "{{ item.host }}"
+    port: "{{ item.port }}"
+    tls: "{{ item.tls }}"
+    onthefly_register: "{{ item.onthefly_register }}"
+    usergroup_sync: "{{ item.usergroup_sync }}"
+    account: "{{ item.account }}"
+    account_password: "{{ item.account_password }}"
+    base_dn: "{{ item.base_dn }}"
+    groups_base: "{{ item.groups_base }}"
+    server_type: "{{ item.server_type }}"
+    attr_login: "{{ item.attr_login }}"
+    attr_firstname: "{{ item.attr_firstname }}"
+    attr_lastname: "{{ item.attr_lastname }}"
+    attr_mail: "{{ item.attr_mail }}"
+    ldap_filter: "{{ item.ldap_filter }}"
+    locations: "{{ item.locations }}"
+    organizations: "{{ item.organizations }}"
     state: present
+  loop: "{{ foreman_auth_source }}"
+  delegate_to: localhost
